tests/type-errors/move-semantics/consuming_receiver_use_after_move.cx
struct Resource : @nodrop {
    int data;
};

void Resource::drop(*this) safe {
    @unsafe {
        @leak(this);
    };
}

int main() {
    Resource value = (Resource) {
        .data = 1
    };

    value.drop();
    return value.data;
}
